# Computer-Vision-Classification-Suite

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  CI_CD.md  COMPLETION_SUMMARY.md  GPU_OPTIMIZATION.md  IMPLEMENTATION_COMPLETE.md  KAGGLE_TESTING.md  LICENSE  Makefile  PRODUCTION_READY.md  PROJECT_AUDIT.md  PROJECT_COMPLETE.md  PROJECT_STATUS.md  README.md  pyproject.toml  requirements.txt  test_all.py  test_complete_system.py
.github/workflows/: ci.yml  docker.yml
backend/: requirements.txt
backend/app/: main.py  models.py
backend/app/routes/: inference.py  metrics.py  training.py
backend/app/utils/: model_loader.py  preprocessing.py
backend/tests/: test_api.py
configs/inference/: config.yaml
configs/training/: baseline.yaml  deep_learning.yaml
cpp/: CMakeLists.txt  README.md  conanfile.txt  simple_inference  test_cpp.sh
cpp/build_simple/: CMakeLists.txt
cpp/include/: inference_engine.hpp  model_loader.hpp  preprocessor.hpp  utils.hpp
cpp/src/: inference_engine.cpp  main.cpp  model_loader.cpp  preprocessor.cpp  simple_inference.cpp  utils.cpp
cpp/tests/: test_inference.cpp  test_preprocessing.cpp
docker/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.python  docker-compose.yml
docs/: api_docs.md  architecture.md  cpp_guide.md  deployment.md  python_guide.md
frontend/: README.md  index.html  package-lock.json  package.json  test_frontend.js
frontend/public/: index.html
frontend/src/: App.jsx
frontend/src/components/: DatasetStats.jsx  LiveInference.jsx  MetricsChart.jsx  ModelComparison.jsx  TrainingMonitor.jsx
frontend/src/services/: api.js  websocket.js
models/: knn_metadata.json  pytorch_cnn_tuned_metadata.json  svm_metadata.json  tensorflow_mobilenet_tuned_metadata.json
models/baseline/: test_metrics.json
python/: GPU_QUICK_START.md  benchmark_gpu.py  numpy_compat_patch.py  requirements.txt  test_models.py
python/scripts/: auto_tune.py  benchmark_all.py  capture_data.py  download_and_test.py  evaluate_models.py  realtime_demo.py  train_baseline.py  train_cnn.py  tune_baseline.py
python/src/evaluation/: __init__.py  benchmark.py  metrics.py
python/src/export/: __init__.py  onnx_exporter.py
python/src/models/: base.py
python/src/models/baseline/: __init__.py  knn.py  svm.py
python/src/models/deep_learning/: __init__.py  pytorch_cnn.py  tensorflow_cnn.py
python/src/training/: __init__.py  config.py  trainer.py
python/tests/: test_dataset.py  test_models.py  test_training.py
scripts/: benchmark.sh  export_onnx.sh  setup.sh  train_all.sh
untracked/: capture_data.py  download_and_test.py  realtime_demo.py  test_all.py  train_all_models.py  train_tensorflow.py  verify_api.py
