[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cv-classification-suite"
version = "1.0.0"
description = "Computer Vision Classification Suite with PyTorch, TensorFlow, and C++"
authors = [{name = "SkullKrak7"}]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23.0",
    "torch>=2.0.0",
    "tensorflow>=2.18.0",
    "opencv-python>=4.8.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]
gpu = ["nvidia-cuda-runtime-cu12", "nvidia-cuda-nvcc-cu12", "nvidia-cudnn-cu12"]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["python/tests"]
