[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cv-classification-suite"
version = "1.0.0"
description = "Computer Vision Classification Suite with PyTorch, TensorFlow, and C++"
authors = [{name = "SkullKrak7"}]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23.0",
    "torch>=2.0.0",
    "tensorflow>=2.18.0",
    "opencv-python>=4.8.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]
gpu = ["nvidia-cuda-runtime-cu12", "nvidia-cuda-nvcc-cu12", "nvidia-cudnn-cu12"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.git
  | \.venv
  | venv
  | build
  | dist
  | node_modules
  | datasets
  | models
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".git", ".venv", "venv", "build", "dist", "node_modules", "datasets", "models"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]
ignore = ["E501", "N803", "N806", "B008"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"test_*.py" = ["N802"]

[tool.pytest.ini_options]
testpaths = ["python/tests", "backend/tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=python --cov=backend --cov-report=term-missing --cov-report=xml"
